# poe-build-search

./: .env.example  .gitignore  README.md  fix_translation_cascade.py  pyproject.toml  requirements.txt  streamlit_app.py  test_mobalytics_llm.py  test_validation.py
.streamlit/: config.toml
app/: config.py  database.py
app/models/: build.py  search.py
data/: poe_builds.db
db/: schema.sql  seed_terms.json
docs/: maxroll_structure.md  mobalytics_structure.md
scraper/: __main__.py  base.py  llm_extractor.py  maxroll.py  mobalytics.py  reddit.py  youtube.py
scripts/: init_db.py
translator/: claude_cli.py
