[project]
name = "poe-build-search"
version = "0.1.0"
description = "PoE ビルド情報を日本語で検索できるWebアプリ"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "playwright>=1.45.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.3.0",
    "aiosqlite>=0.20.0",
    "streamlit>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "scraper", "translator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
